[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/cardengine/container/abstract_container.gd" type="Script" id=1]

[node name="AbstractContainer" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardPath" type="Path2D" parent="."]
curve = null

[node name="Cards" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="resized" from="." to="." method="_on_AbstractContainer_resized"]
